Actualizacion de mantenimientos By SGGG

--- a/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/persona/detalleCliente.zul
+++ b/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/persona/detalleCliente.zul
@@ -253,9 +253,13 @@
                                                                 <label value="Estado Civil" />
                                                                 <label value="*" style="color:red;font-size:10px" />
                                                             </hbox>
-                                                           <combobox id="cmbEstadoCivil">
-                                                              <comboitem label="1"/>
-                                                            </combobox> 
+                                                           <combobox id="cmbEstadoCivil" 
+                                                                     autodrop="true"
+                                                                          mold="rounded"
+                                                                          autocomplete="true"
+                                                                          hflex="1"/>
+                                                             
+                                                            
                                                         </row>
                                                      </rows>
                                                 </grid>
