--- a/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/bodega/detalleBodega.zul
+++ b/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/bodega/detalleBodega.zul
@@ -34,7 +34,7 @@
                         tooltiptext="Guardar registro"/>
                 <button id="btnActualizar"
                         sclass="oT_ButtonWithIcon"
-                        image="/images/btnrefresh.gif"
+                        image="/images/btnsave.gif"
                         tooltiptext="Refrescar registros"/>
                 <button id="btnCerrar"
                         sclass="oT_ButtonWithIcon"
